--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.20",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
