--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
+    "cloudinary": "^1.39.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.0"
+    "mongoose": "^7.4.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.4"
   }
 }
