--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.7.2",
     "sweetalert2": "^11.7.20",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
