--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
